--- a/reasources/css/style.css
+++ b/reasources/css/style.css
@@ -11,6 +11,12 @@ header {
     font-size: 18px;
     font-weight: bold;
 }
+body {
+  margin: 0;
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
+}
 .logo {
     display: flex;
     align-items: center;
@@ -39,6 +45,7 @@ a {
     padding-top: 116px;
 }
 div {
+  display: block;
   border: 1px solid black;
 }
 .column.large {
@@ -64,4 +71,19 @@ h3 {
   display: block;
   font-size: 1.17em;
   font-weight: bold;
+}
+.news-bites h3 {
+  text-align: center;
+  font-size: 16px;
+  margin-bottom: 41px;
+  font-weight: bold;
+}
+.news-bites .bite{
+  display: block;
+  padding: 11px 20px;
+  border-bottom: 1px solid black;
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: dim-gray;
 }
