--- a/reasources/css/style.css
+++ b/reasources/css/style.css
@@ -51,6 +51,34 @@ div {
 .column.large {
   width: 630px;
 }
+.lead-story .image-content {
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png);
+  width: 630;
+  margin-top: 0;
+  font-size: 40px;
+  text-align: left;
+}
+.image-content {
+  display: flex;
+  flex-direction:column;
+  justify-content: center;
+  height: 300px;
+  margin-top: 15px;
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+  text-align: center;
+}
+.fall-cancelled.image-content {
+    background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png);
+}
+.pop-culture.image-content {
+    background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-3.png);
+}
+.cat-ceo.image-content {
+    background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png);
+}
 .column {
   display: flex;
   flex-direction: column;
@@ -86,4 +114,42 @@ h3 {
   font-family: Verdana;
   font-size: 12px;
   color: dim-gray;
+}
+.story {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+}
+.stories {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 17px;
+}
+.stories .text-content {
+    height: 250px;
+}
+.narrative {
+  margin-top: 16px;
+}
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: MediumAquamarine;
+  font-family: Verdana;
+  font-size: 12px;
+  height: 300px;
+}
+footer .title {
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  display: inline-block;
+  border-right: 3px solid white;
+  padding-right: 30px;
+}
+footer nav {
+  display: inline-block;
+  padding-left: 30px;
 }
