--- a/reasources/css/style.css
+++ b/reasources/css/style.css
@@ -46,7 +46,6 @@ a {
 }
 div {
   display: block;
-  border: 1px solid black;
 }
 .column.large {
   width: 630px;
@@ -119,11 +118,11 @@ h3 {
   display: flex;
   flex-direction: column;
   width: 300px;
+  padding-right: 30px;
 }
 .stories {
     display: flex;
     justify-content: space-between;
-    margin-top: 17px;
 }
 .stories .text-content {
     height: 250px;
@@ -139,6 +138,7 @@ footer {
   font-family: Verdana;
   font-size: 12px;
   height: 300px;
+  flex-direction: column;
 }
 footer .title {
   font-family: Georgia;
@@ -152,4 +152,9 @@ footer .title {
 footer nav {
   display: inline-block;
   padding-left: 30px;
+}
+.copyright {
+  padding-top: 30px;
+  font-size: 1.2em;
+  padding-right: 20px;
 }
